--- a/css/main.css
+++ b/css/main.css
@@ -232,3 +232,256 @@
 
     }
 }
+
+
+/* project start */
+
+.project {
+    background-color: #0A0A0A;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.project-container {
+    max-width: 1264px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.project-title {
+    font-family: Bebas Neue, sans-serif;
+    font-size: 76px;
+    font-weight: 400;
+    line-height: 76px;
+    color: white;
+    margin-bottom: 8px;
+}
+
+.project-text {
+    font-family: Manrope, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #C7C7C7;
+    margin-bottom: 80px;
+}
+
+
+.project-row {
+    display: flex;
+    flex-direction: column;
+    gap: 120px;
+}
+
+.project-col {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 24px;
+}
+
+.project-col-left {
+    background-color: #1A1A1A;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 12px;
+    position: relative;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.project-col-left-img {
+    max-width: 486px;
+    border-radius: 14px;
+}
+
+.project-col-left-type {
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    background-color: #0A0A0A;
+    padding: 8px 16px;
+    border-radius: 100px;
+    font-family: Manrope, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 21px;
+    color: white;
+}
+
+.project-col-info {
+    padding: 60px 0 60px 24px;
+}
+
+.project-col-title {
+    font-family: Manrope, sans-serif;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 44.8px;
+    color: white;
+    margin-bottom: 16px;
+}
+
+.project-col-text {
+    font-family: Manrope, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    text-align: left;
+    color: #C7C7C7;
+    margin-bottom: 32px;
+}
+
+.project-col-heading {
+    font-family: Manrope, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    text-align: left;
+    color: white;
+    text-transform: uppercase;
+    padding-bottom: 16px;
+    border-bottom: 1px solid #484848;
+}
+
+.project-col-list {
+    margin-bottom: 48px;
+}
+
+.project-col-item {
+    border-bottom: 1px solid #484848;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+.project-col-item-title {
+    font-family: Manrope, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 25.6px;
+    text-align: left;
+    color: white;
+    text-transform: capitalize;
+}
+
+.project-col-item-value {
+    font-family: Manrope, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 25.6px;
+    color: #C7C7C7;
+}
+
+.project-col-see {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.project-col-link {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    font-family: Manrope, sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    color: #D3E97A;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-bottom: 2px solid #D3E97A;
+}
+
+@media (max-width:1024px) {
+    .project-col {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width:640px) {
+    .project {
+        padding-top: 64px;
+        padding-bottom: 32px;
+        border-top: 1px solid #484848;
+    }
+
+    .project-title {
+        font-size: 43px;
+        line-height: 43px;
+        margin-bottom: 12px;
+    }
+
+    .project-text {
+        font-size: 16px;
+        line-height: 25.6px;
+        margin-bottom: 64px;
+    }
+    .project-row{
+        gap: 96px;
+    }
+
+    .project-col {
+        gap: 40px;
+    }
+
+    .project-col-left {
+        height: 343px;
+        padding: 0;
+    }
+
+    .project-col-left-img {
+        width: 90%;
+    }
+
+    .project-col-left-type {
+        font-size: 12px;
+        font-weight: 500;
+        line-height: 18px;
+        padding: 6px 12px;
+        top: 10px;
+        left: 10px;
+    }
+
+    .project-col-info {
+        padding: 0;
+    }
+
+    .project-col-title {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 33.6px;
+        margin-bottom: 16px;
+    }
+
+    .project-col-text {
+        font-size: 16px;
+        line-height: 25.6px;
+        margin-bottom: 32px;
+    }
+
+    .project-col-heading {
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 24px;
+        padding-bottom: 16px;
+    }
+
+    .project-col-list {
+        margin-bottom: 40px;
+    }
+
+    .project-col-link {
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 21px;
+    }
+    .project-col-link img{
+        width: 16.88px;
+    }
+}
