--- a/css/main.css
+++ b/css/main.css
@@ -422,7 +422,8 @@
         line-height: 25.6px;
         margin-bottom: 64px;
     }
-    .project-row{
+
+    .project-row {
         gap: 96px;
     }
 
@@ -481,7 +482,112 @@
         font-weight: 700;
         line-height: 21px;
     }
-    .project-col-link img{
+
+    .project-col-link img {
         width: 16.88px;
+    }
+}
+
+/* about start */
+
+.about {
+    background-color: #0A0A0A;
+    padding-top: 122px;
+    padding-bottom: 391px;
+    border-top: 1px solid #484848;
+}
+
+.about-container {
+    max-width: 1264px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.about-title {
+    font-family: Bebas Neue, sans-serif;
+    font-size: 101px;
+    font-weight: 400;
+    line-height: 90.9px;
+    color: white;
+    text-wrap: nowrap;
+
+}
+
+.about-info {
+    max-width: 704px;
+}
+
+.about-heading {
+    font-family: Manrope;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 44.8px;
+    color: white;
+    margin-bottom: 16px;
+}
+
+.about-text {
+    font-family: Manrope;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    margin-bottom: 53px;
+    color: white;
+}
+
+.about-link {
+    font-family: Manrope;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    color: #D3E97A;
+    text-transform: uppercase;
+    text-decoration: none;
+    border-bottom: 2px solid #D3E97A;
+    display: inline-block;
+}
+.about-img{
+    display: none;
+}
+@media (max-width:820px) {
+    .about {
+        padding-top: 32px;
+        padding-bottom: 16px;
+    }
+
+    .about-title {
+        display: none;
+    }
+
+    .about-heading {
+        display: none;
+    }
+
+    .about-text {
+        font-size: 18px;
+        line-height: 27px;
+        margin-bottom: 24px;
+    }
+
+    .about-link {
+        font-size: 14px;
+        font-weight: 700;
+        line-height: 21px;
+        margin-bottom: 68px;
+        display: inline-block;
+    }
+    .about-img{
+        height: 400px;
+        display: block;
+        width: 100%;
+        object-fit: cover;
+        border-radius: 12px;
+        object-position: top;
+        max-width: 400px;
     }
 }
