--- a/css/main.css
+++ b/css/main.css
@@ -551,9 +551,11 @@
     border-bottom: 2px solid #D3E97A;
     display: inline-block;
 }
-.about-img{
+
+.about-img {
     display: none;
 }
+
 @media (max-width:820px) {
     .about {
         padding-top: 32px;
@@ -581,7 +583,8 @@
         margin-bottom: 68px;
         display: inline-block;
     }
-    .about-img{
+
+    .about-img {
         height: 400px;
         display: block;
         width: 100%;
@@ -591,3 +594,104 @@
         max-width: 400px;
     }
 }
+
+/* contact */
+
+.contact {
+    background-color: #123;
+    padding-top: 55px;
+    padding-bottom: 80px;
+}
+
+.contact-container {
+    max-width: 1264px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: orange;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 24px;
+}
+
+.contact-info {
+    background-color: red;
+}
+
+.contact-title {
+    font-family: Bebas Neue;
+    font-size: 76px;
+    font-weight: 400;
+    line-height: 76px;
+    color: white;
+    margin-bottom: 16px;
+}
+
+.contact-text {
+    font-family: Manrope;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #C7C7C7;
+    margin-bottom: 40px;
+
+}
+
+.contact-text-link {
+    font-family: Manrope;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: white;
+    text-decoration-color: #D3E97A;
+}
+
+.contact-social {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+}
+
+.contact-social-link {
+    background-color: goldenrod;
+    display: flex;
+}
+
+.contact-form {
+    background-color: blue;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.contact-form-item {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.contact-form-item-title {
+    font-family: Manrope, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 25.6px;
+    text-align: left;
+    color: #C7C7C7;
+}
+
+.contact-form-item-input {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    font-family: Manrope;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    
+}
+
+.contact-form-item-textarea {}
+
+.contact-form-btn {}
