--- a/css/main.css
+++ b/css/main.css
@@ -598,7 +598,7 @@
 /* contact */
 
 .contact {
-    background-color: #123;
+    background-color: #0A0A0A;
     padding-top: 55px;
     padding-bottom: 80px;
 }
@@ -607,7 +607,6 @@
     max-width: 1264px;
     margin-left: auto;
     margin-right: auto;
-    background-color: orange;
     padding-left: 20px;
     padding-right: 20px;
     display: grid;
@@ -616,7 +615,8 @@
 }
 
 .contact-info {
-    background-color: red;
+    display: flex;
+    flex-direction: column;
 }
 
 .contact-title {
@@ -654,12 +654,10 @@
 }
 
 .contact-social-link {
-    background-color: goldenrod;
     display: flex;
 }
 
 .contact-form {
-    background-color: blue;
     display: flex;
     flex-direction: column;
     gap: 24px;
@@ -678,6 +676,8 @@
     line-height: 25.6px;
     text-align: left;
     color: #C7C7C7;
+    cursor: pointer;
+
 }
 
 .contact-form-item-input {
@@ -689,9 +689,111 @@
     font-size: 18px;
     font-weight: 400;
     line-height: 27px;
-    
+    background-color: #1A1A1A;
+    color: white;
+    border-radius: 4px;
+    border: none;
 }
 
-.contact-form-item-textarea {}
+.contact-form-item-textarea {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 16px;
+    padding-right: 16px;
+    font-family: Manrope;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    background-color: #1A1A1A;
+    color: white;
+    border-radius: 4px;
+    height: 156px;
+    border: none;
+}
 
-.contact-form-btn {}
+.contact-form-btn {
+    background-color: #D3E97A;
+    padding-top: 19px;
+    padding-bottom: 19px;
+    padding-left: 40px;
+    padding-right: 40px;
+    border: none;
+    border-radius: 100px;
+    font-family: Manrope;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 16px;
+    text-transform: uppercase;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.connect-person-name {
+    font-family: Manrope;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 25.6px;
+    text-align: left;
+    color: #C7C7C7;    
+    margin-top: auto;
+}
+.connect-person-name-2 {
+    font-family: Manrope;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 25.6px;
+    text-align: left;
+    color: #C7C7C7;    
+    margin-top: auto;
+    display: none;
+}
+
+
+@media (max-width:820px) {
+    .contact {
+        background-color: red;
+        padding-top: 64px;
+        padding-bottom: 64px;
+    }
+
+    .contact-container {
+        grid-template-columns: 1fr;
+        gap: 64px;
+    }
+.connect-person-name {
+    display: none;
+}
+.connect-person-name-2 {
+    display: block;
+    padding-top: 56px;
+}
+
+    .contact-title {
+        font-size: 43px;
+        line-height: 43px;
+        margin-bottom: 16px;
+    }
+
+    .contact-text {
+        font-size: 16px;
+        line-height: 25.6px;
+    }
+
+    .contact-text-link {
+        font-size: 16px;
+        line-height: 25.6px;
+        margin-bottom: 40px;
+    }
+
+    .contact-form-item-input {
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-size: 16px;
+        line-height: 25.6px;
+    }
+
+    .contact-form-item-textarea {
+        height: 148px;
+    }
+
+}
